--- a/index.html
+++ b/index.html
@@ -1,31 +1,52 @@
 <!DOCTYPE html>
 <html>
-
-<head>
+  <head>
     <title>Cronometrando - O seu cronometro online!</title>
     <meta charset="UTF-8" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-</head>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;700&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
-<body>
-    <form name="form_main">
-        <div id="cronometro">
-            <span id="horas">00</span>:<span id="minutos">00</span>:<span id="segundos">00</span>:<span
-                id="centesimos">000</span>
-        </div>
-
+  <body>
+    <main>
+      <div id="title">
+        <h1>Cronometrando - O seu cronometro online!</h1>
+      </div>
+      <div id="cronometro">
+        <span id="horas">00</span>:<span id="minutos">00</span>:<span
+          id="segundos"
+          >00</span
+        >:<span id="centesimos">000</span>
+      </div>
+      <form name="form_main">
         <br />
 
-        <button type="button" id="start" class="btn btn-primary" onclick="inicia()" value="start">start</button>
-        <button type="button" id="pause" class="btn btn-primary" onclick="pausa()" disabled>pause</button>
-        <button type="button" id="reset" class="btn btn-primary" onclick="reseta()" disabled>reset</button>
-        <button type="button" id="save" class="btn btn-primary" onclick="salvar()">salvar</button>
-    </form>
-    <div id="teste">
-        <tbody></tbody>
-    </div>
+        <button type="button" id="start" class="b" onclick="startCrono()">
+          start
+        </button>
+        <button
+          type="button"
+          id="stop"
+          class="b"
+          onclick="stopCrono()"
+          disabled
+        >
+          stop
+        </button>
+        <button
+          type="button"
+          id="reset"
+          class="b"
+          onclick="resetCrono()"
+          disabled
+        >
+          reset
+        </button>
+      </form>
+    </main>
     <script type="text/javascript" src="script.js"></script>
-</body>
-
+  </body>
 </html>
