Correção de contagem de centesimos

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <main>
       <div id="title">
-        <h1>Cronometrando - O seu cronometro online!</h1>
+        <h1>Cronometrando<br />O seu cronometro online!</h1>
       </div>
       <div id="cronometro">
         <span id="horas">00</span>:<span id="minutos">00</span>:<span
